# praxis

./: .gitattributes  .gitignore  .gitmodules  .release-please-config.json  .release-please-manifest.json  Cargo.toml  LICENSE  README.md  devenv.nix  devenv.yaml  proptest.toml
crates/chat/: CHANGELOG.md  Cargo.toml
crates/chat/benches/: chat_benchmarks.rs
crates/chat/src/: lib.rs
crates/cli/: CHANGELOG.md  Cargo.toml
crates/cli/src/: main.rs
crates/domains/: CHANGELOG.md  Cargo.toml
crates/domains/benches/: ontology_benchmarks.rs
crates/domains/data/function-words/: english.xml
crates/domains/data/wordnet/: english-wordnet-2025.xml
crates/domains/docs/: explorer.html  report.html  report.json
crates/domains/src/: classify.rs  lib.rs  manual_registrations.rs
crates/domains/src/applied/: mod.rs
crates/domains/src/cognitive/: mod.rs
crates/domains/src/formal/: mod.rs
crates/domains/src/governance/: mod.rs
crates/domains/src/natural/: mod.rs
crates/domains/src/science/: mod.rs
crates/domains/src/social/: mod.rs
crates/domains/src/systems/: mod.rs
crates/domains/src/technology/: mod.rs
crates/examples/: CHANGELOG.md  Cargo.toml
crates/examples/src/: lib.rs
crates/examples/src/puzzles/: byzantine.rs  hanoi.rs  knights_tour.rs  konigsberg.rs  missionaries.rs  monty_hall.rs  n_queens.rs  prisoner.rs  river_crossing.rs  sudoku.rs  water_jugs.rs
crates/examples/src/sensor_fusion/: constant_velocity.rs  covariance_intersection.rs  dvl_ins.rs  falling_object.rs  frame_chain.rs  gating_validation.rs  ins_gnss_integration.rs  mod.rs  multi_sensor_ahrs.rs  orbit_determination.rs  radar_tracking.rs
crates/pr4xis/: CHANGELOG.md  Cargo.toml
crates/pr4xis-derive/: Cargo.toml
crates/pr4xis-derive/src/: lib.rs  ontology.rs
crates/pr4xis/src/: lib.rs
crates/pr4xis/src/category/: adjunction.rs  algebra.rs  arrow.rs  category.rs  entity.rs  functor.rs  invariants.rs  kinds.rs  kleisli.rs  macros.rs  mod.rs  monoidal.rs  op.rs  optics.rs  relationship.rs  terminal.rs  traced.rs  transformation.rs  transformer.rs  validate.rs  yoneda.rs
crates/pr4xis/src/codegen/: generate.rs
crates/pr4xis/src/logic/: axiom.rs
crates/pr4xis/src/ontology/: compose.rs  domain.rs  meta.rs  (+5 more)
crates/praxis/: CHANGELOG.md  Cargo.toml
crates/praxis-calculator/: CHANGELOG.md  Cargo.toml  README.md
crates/praxis-calculator/proptest-regressions/: tests.txt
crates/praxis-calculator/src/: bitwise.rs  calc.rs  complex.rs  constants.rs  engine.rs  expr.rs  lib.rs  op.rs  tests.rs  units.rs  value.rs
crates/praxis-category/: CHANGELOG.md  Cargo.toml  README.md
crates/praxis-category/src/: axiom.rs  category.rs  entity.rs  functor.rs  lib.rs  morphism.rs  relationship.rs  tests.rs  transformation.rs  validate.rs
crates/praxis-chess/: CHANGELOG.md  Cargo.toml  README.md
crates/praxis-chess/games/: evergreen_game.pgn  opera_game.pgn  scholars_mate.pgn
crates/praxis-chess/src/: board.rs  engine.rs  lib.rs  moves.rs  ontology.rs  pgn.rs  piece.rs  square.rs  tests.rs
crates/praxis-colors/: CHANGELOG.md  Cargo.toml  README.md
crates/praxis-colors/proptest-regressions/: tests.txt
crates/praxis-colors/src/: engine.rs  lib.rs  mixing.rs  ontology.rs  rgb.rs  tests.rs
crates/praxis-elevator/: CHANGELOG.md  Cargo.toml  README.md
crates/praxis-elevator/proptest-regressions/: tests.txt
crates/praxis-elevator/src/: building.rs  dispatch.rs  elevator.rs  engine.rs  lib.rs  ontology.rs  request.rs  tests.rs
crates/praxis-engine/: CHANGELOG.md  Cargo.toml  README.md
crates/praxis-engine/src/: action.rs  engine.rs  lib.rs  precondition.rs  situation.rs  tests.rs  trace.rs
crates/praxis-http/: CHANGELOG.md  Cargo.toml  README.md
crates/praxis-http/src/: engine.rs  lib.rs  ontology.rs  response.rs  tests.rs
crates/praxis-legal/: CHANGELOG.md  Cargo.toml  README.md
crates/praxis-legal/src/: argument.rs  authority.rs  decision.rs  element.rs  engine.rs  entity.rs  fact.rs  finding.rs  lib.rs  lifecycle.rs  ontology.rs  rule.rs  source.rs  tests.rs
crates/praxis-logic/: CHANGELOG.md  Cargo.toml  README.md
crates/praxis-logic/src/: composition.rs  lib.rs  propositional.rs  truth_table.rs
crates/praxis-math/: CHANGELOG.md  Cargo.toml  README.md
crates/praxis-math/proptest-regressions/: fibonacci.txt  pythagorean.txt
crates/praxis-math/src/: feynman.rs  fibonacci.rs  lib.rs  ontology.rs  primes.rs  pythagorean.rs  quadratic.rs  sets.rs
crates/praxis-music/: CHANGELOG.md  Cargo.toml  README.md
crates/praxis-music/src/: chord.rs  engine.rs  lib.rs  ontology.rs  scale.rs  tests.rs
crates/praxis-ontology/: CHANGELOG.md  Cargo.toml  README.md
crates/praxis-ontology/src/: domain.rs  lib.rs  logic.rs  property.rs  rule.rs  tests.rs  validate.rs
crates/praxis-physics/: CHANGELOG.md  Cargo.toml  README.md
crates/praxis-physics/proptest-regressions/: electromagnetism.txt
crates/praxis-physics/src/: electromagnetism.rs  energy.rs  lib.rs  maxwell.rs  mechanics.rs  ontology.rs  quantum.rs  relativity.rs
crates/praxis-puzzles/: CHANGELOG.md  Cargo.toml  README.md
crates/praxis-puzzles/proptest-regressions/: missionaries.txt
crates/praxis-puzzles/src/: byzantine.rs  hanoi.rs  knights_tour.rs  konigsberg.rs  lib.rs  missionaries.rs  monty_hall.rs  n_queens.rs  prisoner.rs  river_crossing.rs  sudoku.rs  water_jugs.rs
crates/praxis-rubik/: CHANGELOG.md  Cargo.toml  README.md
crates/praxis-rubik/src/: cube.rs  engine.rs  lib.rs  moves.rs  ontology.rs  tests.rs
crates/praxis-simon/: CHANGELOG.md  Cargo.toml  README.md
crates/praxis-simon/src/: engine.rs  game.rs  input.rs  lib.rs  ontology.rs  tests.rs
crates/praxis-tetris/: CHANGELOG.md  Cargo.toml  README.md
crates/praxis-tetris/src/: board.rs  engine.rs  game.rs  lib.rs  ontology.rs  tests.rs
crates/praxis-traffic/: CHANGELOG.md  Cargo.toml  README.md
crates/praxis-traffic/src/: engine.rs  intersection.rs  lib.rs  ontology.rs  tests.rs
crates/praxis/src/: codegen_data.rs  lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
crates/web/: Cargo.toml
crates/web/src/: main.rs
(+1508 files in other folders)
