[workspace]
resolver = "3"
members = [
    "crates/praxis-category",
    "crates/praxis-ontology",
    "crates/praxis-engine",
    "crates/praxis-logic",
    "crates/praxis-chess",
    "crates/praxis-rubik",
    "crates/praxis-elevator",
    "crates/praxis-simon",
    "crates/praxis-tetris",
    "crates/praxis-traffic",
    "crates/praxis-music",
    "crates/praxis-http",
    "crates/praxis-colors",
    "crates/praxis-calculator",
    "crates/praxis-legal",
    "crates/praxis-puzzles",
    "crates/praxis-math",
    "crates/praxis-physics",
]

[workspace.dependencies]
praxis-category = { path = "crates/praxis-category", version = "0.3.0" }
praxis-logic = { path = "crates/praxis-logic", version = "0.2.2" }
praxis-ontology = { path = "crates/praxis-ontology", version = "0.2.2" }
praxis-engine = { path = "crates/praxis-engine", version = "0.2.2" }
praxis-math = { path = "crates/praxis-math", version = "0.2.2" }
