[package]
name = "pr4xis-chat"
version = "0.5.0"
edition = "2024"
authors = ["i-am-logger"]
description = "Praxis chat engine — shared logic for CLI and WASM"
license = "CC-BY-NC-SA-4.0"
repository = "https://github.com/i-am-logger/pr4xis"
homepage = "https://github.com/i-am-logger/pr4xis"

[dependencies]
pr4xis = { version = "0.8.0", path = "../pr4xis" }
pr4xis-domains = { version = "0.11.0", path = "../domains" }

[lints]
workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "chat_benchmarks"
harness = false
