[package]
name = "praxis-cli"
version = "0.1.2"
edition = "2024"
authors = ["i-am-logger"]
description = "Praxis chatbot CLI — axiomatic intelligence via ontology"
license = "CC-BY-NC-SA-4.0"

[[bin]]
name = "praxis"
path = "src/main.rs"

[dependencies]
praxis = { path = "../praxis" }
praxis-chat = { path = "../chat" }
praxis-domains = { path = "../domains" }

[build-dependencies]
praxis = { path = "../praxis", features = ["codegen"] }
