[package]
name = "pr4xis-cli"
version = "0.1.6"
edition = "2024"
authors = ["i-am-logger"]
description = "Praxis chatbot CLI — axiomatic intelligence via ontology"
license = "CC-BY-NC-SA-4.0"

[[bin]]
name = "pr4xis"
path = "src/main.rs"

[dependencies]
pr4xis = { version = "0.5.0", path = "../pr4xis" }
pr4xis-chat = { version = "0.1.5", path = "../chat" }
pr4xis-domains = { version = "0.6.0", path = "../domains" }

[build-dependencies]
pr4xis = { version = "0.5.0", path = "../pr4xis", features = ["codegen"] }
