[package]
name = "pr4xis-cli"
version = "0.4.1"
edition = "2024"
authors = ["i-am-logger"]
description = "Praxis chatbot CLI — axiomatic intelligence via ontology"
license = "CC-BY-NC-SA-4.0"
repository = "https://github.com/i-am-logger/pr4xis"
homepage = "https://github.com/i-am-logger/pr4xis"

[[bin]]
name = "pr4xis"
path = "src/main.rs"

[dependencies]
pr4xis = { version = "0.7.0", path = "../pr4xis" }
pr4xis-chat = { version = "0.4.1", path = "../chat" }
pr4xis-domains = { version = "0.9.0", path = "../domains", features = ["fetch"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[lints]
workspace = true

[build-dependencies]
pr4xis = { version = "0.7.0", path = "../pr4xis", features = ["codegen"] }
