[package]
name = "pr4xis-domains"
version = "0.6.0"
edition = "2024"
authors = ["i-am-logger"]
description = "Applied domains — chess, calculator, elevator, legal, traffic, HTTP, games, math, physics, music, colors"
license = "CC-BY-NC-SA-4.0"
repository = "https://github.com/i-am-logger/pr4xis"
homepage = "https://github.com/i-am-logger/pr4xis"

[dependencies]
pr4xis = { version = "0.5.0", path = "../pr4xis" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.6"

[[bench]]
name = "ontology_benchmarks"
harness = false
