[package]
name = "pr4xis"
version = "0.9.0"
edition = "2024"
authors = ["i-am-logger"]
description = "Prove your domain is correct — ontology-driven rule enforcement with category theory, logical composition, and runtime state machines"
license = "CC-BY-NC-SA-4.0"
repository = "https://github.com/i-am-logger/pr4xis"
homepage = "https://github.com/i-am-logger/pr4xis"
keywords = ["ontology", "category-theory", "enforcement", "state-machine", "formal-methods"]

[features]
codegen = ["dep:quick-xml"]

[dependencies]
linkme = "0.3"
paste = "1"
pr4xis-derive = { version = "0.1.0", path = "../pr4xis-derive" }
quick-xml = { version = "0.37", features = ["serialize"], optional = true }

[lints]
workspace = true

[dev-dependencies]
proptest = "1.6"
