[package]
name = "praxis-calculator"
version = "0.5.0"
edition = "2024"
authors = ["i-am-logger"]
description = "Scientific calculator enforcement — domain constraints, order of operations, unit safety"
license = "CC-BY-NC-SA-4.0"
keywords = ["calculator", "math", "ontology", "enforcement"]

[dependencies]
praxis-category.workspace = true
praxis-ontology.workspace = true
praxis-engine.workspace = true
praxis-math.workspace = true

[dev-dependencies]
proptest = "1.6"
