[package]
name = "praxis-chess"
version = "0.5.0"
edition = "2024"
authors = ["i-am-logger"]
description = "Chess rules enforcement via ontology — guarantees no illegal moves"
license = "CC-BY-NC-SA-4.0"
keywords = ["chess", "ontology", "rules", "enforcement"]

[dependencies]
praxis-category.workspace = true
praxis-ontology.workspace = true
praxis-engine.workspace = true

[dev-dependencies]
proptest = "1.6"
