[package]
name = "praxis-chess"
version = "0.9.0"
edition = "2024"
authors = ["i-am-logger"]
description = "Chess rules enforcement via ontology — guarantees no illegal moves"
license = "CC-BY-NC-SA-4.0"
keywords = ["chess", "ontology", "rules", "enforcement"]

[dependencies]
praxis-category = { path = "../praxis-category", version = "0.10.0" }
praxis-ontology = { path = "../praxis-ontology", version = "0.9.0" }
praxis-engine = { path = "../praxis-engine", version = "0.9.0" }

[dev-dependencies]
proptest = "1.6"
