[package]
name = "praxis-colors"
version = "0.1.0"
edition = "2024"
authors = ["i-am-logger"]
license = "CC-BY-NC-SA-4.0"

[dependencies]
praxis-category = { path = "../praxis-category" }
praxis-ontology = { path = "../praxis-ontology" }
praxis-engine = { path = "../praxis-engine" }

[dev-dependencies]
proptest = "1.6"
