[package]
name = "praxis-colors"
version = "0.7.0"
edition = "2024"
authors = ["i-am-logger"]
license = "CC-BY-NC-SA-4.0"

[dependencies]
praxis-category = { path = "../praxis-category", version = "0.8.0" }
praxis-ontology = { path = "../praxis-ontology", version = "0.7.0" }
praxis-engine = { path = "../praxis-engine", version = "0.7.0" }

[dev-dependencies]
proptest = "1.6"
