[package]
name = "praxis-elevator"
version = "0.2.1"
edition = "2024"
authors = ["i-am-logger"]
description = "Elevator dispatch rules enforcement via ontology — optimal multi-elevator scheduling with safety guarantees"
license = "CC-BY-NC-SA-4.0"
keywords = ["elevator", "ontology", "scheduling", "dispatch", "enforcement"]

[dependencies]
praxis-category = { path = "../praxis-category", version = "0.2.0" }
praxis-ontology = { path = "../praxis-ontology", version = "0.2.0" }
praxis-engine = { path = "../praxis-engine", version = "0.2.0" }

[dev-dependencies]
proptest = "1.6"
