[package]
name = "praxis-elevator"
version = "0.5.0"
edition = "2024"
authors = ["i-am-logger"]
description = "Elevator dispatch rules enforcement via ontology — optimal multi-elevator scheduling with safety guarantees"
license = "CC-BY-NC-SA-4.0"
keywords = ["elevator", "ontology", "scheduling", "dispatch", "enforcement"]

[dependencies]
praxis-category.workspace = true
praxis-ontology.workspace = true
praxis-engine.workspace = true

[dev-dependencies]
proptest = "1.6"
