[package]
name = "praxis-engine"
version = "0.5.0"
edition = "2024"
authors = ["i-am-logger"]
description = "Runtime rule enforcement engine — situations, actions, preconditions, traces, undo/redo"
license = "CC-BY-NC-SA-4.0"
keywords = ["praxis", "state-machine", "enforcement", "runtime"]
categories = ["data-structures"]

[dependencies]
praxis-category.workspace = true
praxis-ontology.workspace = true

[dev-dependencies]
proptest = "1.6"
