[package]
name = "praxis-http"
version = "0.9.0"
edition = "2024"
authors = ["i-am-logger"]
description = "HTTP protocol enforcement — method semantics, connection states, retries"
repository = "https://github.com/i-am-logger/praxis"
license = "CC-BY-NC-SA-4.0"

[dependencies]
praxis-category = { path = "../praxis-category", version = "0.10.0" }
praxis-ontology = { path = "../praxis-ontology", version = "0.9.0" }
praxis-engine = { path = "../praxis-engine", version = "0.9.0" }

[dev-dependencies]
proptest = "1.6"
