[package]
name = "praxis-ontology"
version = "0.10.0"
edition = "2024"
authors = ["i-am-logger"]
description = "Define, validate, and enforce domain ontologies — what exists, how things relate, and what rules govern them"
repository = "https://github.com/i-am-logger/praxis"
license = "CC-BY-NC-SA-4.0"
keywords = ["ontology", "domain-model", "type-system", "formal-methods"]
categories = ["data-structures", "mathematics"]

[dependencies]
praxis-category = { path = "../praxis-category", version = "0.11.0" }
praxis-logic = { path = "../praxis-logic", version = "0.10.0" }

[dev-dependencies]
proptest = "1.6"
