[package]
name = "praxis-physics"
version = "0.2.0"
edition = "2024"
authors = ["i-am-logger"]
license = "CC-BY-NC-SA-4.0"

[dependencies]
praxis-category = { path = "../praxis-category" }
praxis-ontology = { path = "../praxis-ontology" }
praxis-engine = { path = "../praxis-engine" }
praxis-math = { path = "../praxis-math" }

[dev-dependencies]
proptest = "1.6"
