[package]
name = "praxis-puzzles"
version = "0.2.2"
edition = "2024"
authors = ["i-am-logger"]
description = "Classic logic puzzles with rule enforcement — river crossing, Tower of Hanoi, water jugs, missionaries, Monty Hall"
license = "CC-BY-NC-SA-4.0"
keywords = ["puzzles", "logic", "ontology", "enforcement"]

[dependencies]
praxis-engine = { path = "../praxis-engine", version = "0.2.1" }
praxis-math = { path = "../praxis-math", version = "0.2.1" }

[dev-dependencies]
proptest = "1.6"
