[package]
name = "praxis-puzzles"
version = "0.5.0"
edition = "2024"
authors = ["i-am-logger"]
description = "Classic logic puzzles with rule enforcement — river crossing, Tower of Hanoi, water jugs, missionaries, Monty Hall"
license = "CC-BY-NC-SA-4.0"
keywords = ["puzzles", "logic", "ontology", "enforcement"]

[dependencies]
praxis-engine.workspace = true
praxis-math.workspace = true

[dev-dependencies]
proptest = "1.6"
