[package]
name = "praxis-rubik"
version = "0.3.0"
edition = "2024"
authors = ["i-am-logger"]
description = "Rubik's cube rules enforcement via ontology — guarantees only valid moves, group theory"
license = "CC-BY-NC-SA-4.0"
keywords = ["rubik", "ontology", "group-theory", "enforcement"]

[dependencies]
praxis-category = { path = "../praxis-category", version = "0.3.0" }
praxis-ontology = { path = "../praxis-ontology", version = "0.2.2" }
praxis-engine = { path = "../praxis-engine", version = "0.2.2" }

[dev-dependencies]
proptest = "1.6"
