[package]
name = "praxis-simon"
version = "0.2.2"
edition = "2024"
authors = ["i-am-logger"]
description = "Simon Says sequence enforcement — memory game rules guaranteed by ontology"
license = "CC-BY-NC-SA-4.0"
keywords = ["simon-says", "ontology", "sequence", "enforcement"]

[dependencies]
praxis-category = { path = "../praxis-category", version = "0.2.1" }
praxis-ontology = { path = "../praxis-ontology", version = "0.2.1" }
praxis-engine = { path = "../praxis-engine", version = "0.2.1" }

[dev-dependencies]
proptest = "1.6"
