[package]
name = "praxis-simon"
version = "0.5.0"
edition = "2024"
authors = ["i-am-logger"]
description = "Simon Says sequence enforcement — memory game rules guaranteed by ontology"
license = "CC-BY-NC-SA-4.0"
keywords = ["simon-says", "ontology", "sequence", "enforcement"]

[dependencies]
praxis-category.workspace = true
praxis-ontology.workspace = true
praxis-engine.workspace = true

[dev-dependencies]
proptest = "1.6"
