[package]
name = "praxis-tetris"
version = "0.5.0"
edition = "2024"
authors = ["i-am-logger"]
description = "Tetris rules enforcement via ontology — spatial constraints, gravity, rotation, line clears"
license = "CC-BY-NC-SA-4.0"
keywords = ["tetris", "ontology", "spatial", "enforcement"]

[dependencies]
praxis-category.workspace = true
praxis-ontology.workspace = true
praxis-engine.workspace = true

[dev-dependencies]
proptest = "1.6"
