[package]
name = "praxis-tetris"
version = "0.7.0"
edition = "2024"
authors = ["i-am-logger"]
description = "Tetris rules enforcement via ontology — spatial constraints, gravity, rotation, line clears"
license = "CC-BY-NC-SA-4.0"
keywords = ["tetris", "ontology", "spatial", "enforcement"]

[dependencies]
praxis-category = { path = "../praxis-category", version = "0.8.0" }
praxis-ontology = { path = "../praxis-ontology", version = "0.7.0" }
praxis-engine = { path = "../praxis-engine", version = "0.7.0" }

[dev-dependencies]
proptest = "1.6"
