[package]
name = "praxis-traffic"
version = "0.2.1"
edition = "2024"
authors = ["i-am-logger"]
license = "CC-BY-NC-SA-4.0"

[dependencies]
praxis-category = { path = "../praxis-category", version = "0.2.0" }
praxis-ontology = { path = "../praxis-ontology", version = "0.2.0" }
praxis-engine = { path = "../praxis-engine", version = "0.2.0" }

[dev-dependencies]
proptest = "1.6"
