[package]
name = "praxis"
version = "0.3.0"
edition = "2024"
authors = ["i-am-logger"]
description = "Prove your domain is correct — ontology-driven rule enforcement with category theory, logical composition, and runtime state machines"
license = "CC-BY-NC-SA-4.0"
repository = "https://github.com/i-am-logger/praxis"
homepage = "https://github.com/i-am-logger/praxis"
keywords = ["ontology", "category-theory", "enforcement", "state-machine", "formal-methods"]

[features]
codegen = ["dep:quick-xml"]

[dependencies]
quick-xml = { version = "0.37", features = ["serialize"], optional = true }

[dev-dependencies]
proptest = "1.6"
