[package]
name = "praxis-wasm"
version = "0.1.0"
edition = "2024"
authors = ["i-am-logger"]
description = "Praxis chatbot — WASM build for browser"
license = "CC-BY-NC-SA-4.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
praxis = { path = "../praxis" }
praxis-chat = { path = "../chat" }
praxis-domains = { path = "../domains" }
wasm-bindgen = "0.2"

[build-dependencies]
praxis = { path = "../praxis", features = ["codegen"] }
