[package]
name = "pr4xis-wasm"
version = "0.1.0"
edition = "2024"
authors = ["i-am-logger"]
description = "Praxis chatbot — WASM build for browser"
license = "CC-BY-NC-SA-4.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
pr4xis = { version = "0.3.0", path = "../pr4xis" }
pr4xis-chat = { version = "0.1.3", path = "../chat" }
pr4xis-domains = { version = "0.4.0", path = "../domains" }
wasm-bindgen = "0.2"

[build-dependencies]
pr4xis = { version = "0.3.0", path = "../pr4xis", features = ["codegen"] }
